# Schwab-Blows-2

./: .gitignore  Docs_Layout.md  Makefile  README.md  pyproject.toml
docs/: AGENTS.md  ANALYTICS_SPEC.md  API_CONTRACT.md  ARCHITECTURE.md  BACKLOG.md  CONTRIBUTING.md  DATA_SOURCES.md  DB_SCHEMA.md  DEPLOYMENT.md  GLOSSARY.md  MVP_Scope.md  PRD.md  PROJECT_CAPSULE.md  RATES_DIV_BORROW_POLICY.md  REQUIREMENTS.md  RUNBOOK.md  SCHWAB_CAPABILITIES_MATRIX.md  SCHWAB_INGESTION_POLICY.md  SECURITY.md  SNAPSHOT_POLICY.md  STACK.md  STATE.md  TOS_PARITY_SPEC.md  USER_FLOWS.md  VALIDATION_CASES.md  VALIDATION_POLICY.md
docs/DECISIONS/: ADR-0001-foundations.md
src/aegisrisk/api/: server.py
src/aegisrisk/pricing/: binomial_crr.py  black_scholes.py
src/aegisrisk/utils/: hashing.py
tests/: test_api_price.py  test_binomial_invariants.py  test_black_scholes_goldens.py  test_hashing.py
