[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisrisk"
version = "0.0.0"
description = "AegisRisk (bootstrap analytics core)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110","uvicorn>=0.27","pydantic>=2.6"]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "httpx>=0.27"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
